--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,14 @@
-# Ignore virtual environment files
-venv/
-env/
-
-# Ignore Python cache files
-__pycache__/
-
-# Ignore logs
-*.log
-
-# Ignore database files
-*.db
-
-# Ignore generated files
 *.pyc
 *.pyo
-*.pyd
-
-# Ignore local development settings
-local_settings.py
-
-# Ignore IDE and editor files
-.vscode/
-.idea/
-*.sublime-project
-*.sublime-workspace
-
-# Ignore package build files
+__pycache__/
+.env
+/.vscode
+/.idea
+/.venv
+/.mypy_cache
+/.pytest_cache
+/.coverage
+/.cache
 dist/
 build/
 *.egg-info/
-
-# txtfiles
-*.txt
